manifests/registry/component/backstage/deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: backstage
  name: backstage
spec:
  replicas: 1
  selector:
    app: backstage
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: backstage
      name: backstage
    spec:
      containers:
      - name: backstage
        image: backstage:latest
        imagePullPolicy: Always
        ports:
          - name: 'app'
            containerPort: 7007
        resources:
          limits:
            cpu: 1000m
            memory: 1000Mi
          requests:
            cpu: 500m
            memory: 500Mi
        terminationMessagePath: /dev/termination-log
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - backstage
      from:
        kind: ImageStreamTag
        name: backstage:latest
    type: ImageChange
