manifests/registry/component/backstage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: backstage
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    app: backstage
    template: backstage
spec:
  to:
    kind: Service
    name: backstage
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
